# packet-analyzer-benchmarks

./: Readme.md
dispatching-data-structures/: .gitignore  CMakeLists.txt
dispatching-data-structures/include/: Defines.h  InputReader.h  MyPacket.h  Timing.h
dispatching-data-structures/include/analyzers/: All.h  ETHAnalyzer.h  IAnalyzer.h  IPv4Analyzer.h  IPv6Analyzer.h  TCPAnalyzer.h  UDPAnalyzer.h  UnknownAnalyzer.h
dispatching-data-structures/include/dispatchers/: All.h  IDispatcher.h  TreeMap.h
dispatching-data-structures/include/dispatchers/hashtables/: Array.h  Cuckoo.h  Hanov.h  Sparse.h  SparseUpper.h  Universal.h  UniversalSim.h  UnorderedMap.h  Vector.h
dispatching-data-structures/include/dispatchers/metaprogramming/: IMeta.h
dispatching-data-structures/scripts/: do_measurements.py  gen_analyzer.py  gen_code.py  gen_packet.py  makePlot.py  protoToBenchmark.py  regenerate_paper_plots.sh  setup.sh
dispatching-data-structures/src/: InputReader.cpp  MyPacket.cpp  Timing.cpp  benchmarkMain.cpp  cacheAnalyzerMain.cpp
dispatching-data-structures/src/analyzers/: ETHAnalyzer.cpp  IPv4Analyzer.cpp  IPv6Analyzer.cpp  TCPAnalyzer.cpp  UDPAnalyzer.cpp  UnknownAnalyzer.cpp
dispatching-data-structures/src/dispatchers/: TreeMap.cpp
dispatching-data-structures/src/dispatchers/hashtables/: Array.cpp  Cuckoo.cpp  Hanov.cpp  Sparse.cpp  SparseUpper.cpp  Universal.cpp  UniversalSim.cpp  UnorderedMap.cpp  Vector.cpp
dispatching-data-structures/src/dispatchers/metaprogramming/: IMeta.cpp
monitor-performance/: .gitignore  benchmark.sh  setup.sh  stats.py
